# Jash

./: .gitignore  Instrucciones_Para_Ejecutar  Makefile.am  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  README.md  ast.h  code.c  code.h  codegen.h  codegen_closure.c  codegen_common.c  codegen_common.h  codegen_externs.stringlist  codegen_x86_64.dasc.c  datachannel.c  datachannel.h  environ.c  environ.h  fdchannel.c  fdchannel.h  histcontrol.stringlist  instance.h  instance.stringlist  jash.c  jash.h  jobqueue.c  jobqueue.h  lexer.c  lexer.h  machine.c  machine.h  main.c  parser.c  parser.h  profile.c  profile.h  readline.c  readline.h  token.c  token.h  walker.h
src/codegen/: .gitignore  block.c  block.h  branch.c  branch.h  builtin.c  closure.h  codegen.c  codegen.h  context.h  extern.stringlist  externs.c  externs.h  generate.c  onces.stringlist  system.h  tag.h  vararray.h  walker.h
src/codegen/backend/: .gitignore  common.dasc.c  common.h  x86_64.dasc.c
src/codegen/debug/: builder.c  gdb.c  gdb.h
src/dossier/: .gitignore  basic.strings  dossier.h  dossier.stringlist  strings.resources.gresource  strings.resources.xml
src/dynasm/: .gitignore
src/lexer/: datachannel.c  datachannel.h  lexer.c  lexer.h  private.h  token.c  token.h
src/parser/: .gitignore  ast.h  operator.h  operator.stringlist  parser.c  parser.h  private.h  walker.h
src/runtime/: .gitignore  marshal.list  runner.c  runner.h
src/term/: .gitignore  histcontrol.h  histcontrol.stringlist  readline.c  readline.h
